--- a/goit-markup-hw-02/portfolio.html
+++ b/goit-markup-hw-02/portfolio.html
@@ -32,8 +32,19 @@
   </nav>
 
    <ul class="header-contact-list">
-     <li class="header-contact-item list"><a href="mailto:info@devstudio.com" class="header-contact link">info@devstudio.com</a></li>
-     <li class="header-contact-item list"><a href="tel:+380961111111" class="header-contact link">+38 096 111 11 11</a></li>
+     <li class="header-contact-item list">
+      <a href="" class="contact-icon-link"><svg class="contact-icon" width="16" height="12">
+          <use href="/images/symbol-defs1.svg#icon-meil"></use>
+        </svg> </a>
+      <a href="mailto:info@devstudio.com" class="header-contact link">info@devstudio.com</a>
+
+    </li>
+    <a href="" class="contact-icon-link"><svg class="contact-icon" width="10" height="16">
+        <use href="/images/symbol-defs1.svg#icon-smartphone"></use>
+      </svg> </a>
+     <li class="header-contact-item list"><a href="tel:+380961111111" class="header-contact link">+38 096 111 11 11</a>
+     
+    </li>
    </ul>
   </div>
 </header>
