--- a/goit-markup-hw-02/portfolio.html
+++ b/goit-markup-hw-02/portfolio.html
@@ -32,6 +32,7 @@
   </nav>
 
    <ul class="header-contact-list">
+
      <li class="header-contact-item list">
       <a href="" class="contact-icon-link"><svg class="contact-icon" width="16" height="12">
           <use href="/images/symbol-defs1.svg#icon-meil"></use>
@@ -39,10 +40,12 @@
       <a href="mailto:info@devstudio.com" class="header-contact link">info@devstudio.com</a>
 
     </li>
-    <a href="" class="contact-icon-link"><svg class="contact-icon" width="10" height="16">
-        <use href="/images/symbol-defs1.svg#icon-smartphone"></use>
-      </svg> </a>
-     <li class="header-contact-item list"><a href="tel:+380961111111" class="header-contact link">+38 096 111 11 11</a>
+  
+     <li class="header-contact-item list">
+      <a href="" class="contact-icon-link"><svg class="contact-icon" width="10" height="16">
+          <use href="/images/symbol-defs1.svg#icon-smartphone"></use>
+        </svg> </a>
+      <a href="tel:+380961111111" class="header-contact link">+38 096 111 11 11</a>
      
     </li>
    </ul>
@@ -51,7 +54,7 @@
 
 <main>
 <section class="hero">
-<div class="container main-container">
+<div class="container">
  <ul class="btn-list">
   <li class="btn-item list"><button type="button" class="btn-list-item">Все</button></li>
   <li class="btn-item list"><button type="button" class="btn-list-item">Веб-сайты</button></li>
@@ -150,7 +153,9 @@
 </main>
 
 <footer class="footer" >
-  <div class="container">
+
+  <div class="container container-flex">
+    <div class="adress-flex">
  <a href="" class="logo-footer link">Web<span class="logo-studio">Studio</span></a>
  <address class="adress">
    <p class="adress-text">г. Киев, пр-т Леси Украинки, 26</p>
@@ -163,6 +168,43 @@
      +38 099 111 11 11</a></li>
    </ul>
  </address>
+  </div>
+
+<section class="soc-seti">
+  <h2 class="soc-seti-title">присоединяйтесь</h2>
+  <ul class="soc-seti-list list">
+    <li class="soc-seti-item"><a href="" class="soc-seti-link">
+        <svg class="soc-seti-logo" width="20" height="20">
+          <use href="../images/icons.svg#icon-instagram-2"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="soc-seti-item"><a href="" class="soc-seti-link">
+        <svg class="soc-seti-logo" width="20" height="20">
+          <use href="../images/icons.svg#icon-twitter-1-1"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="soc-seti-item"><a href="" class="soc-seti-link">
+        <svg class="soc-seti-logo" width="20" height="20">
+          <use href="../images/icons.svg#icon-facebook-1"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="soc-seti-item"><a href="" class="soc-seti-link">
+        <svg class="soc-seti-logo" width="20" height="20">
+          <use href="../images/icons.svg#icon-linkedin-1"></use>
+        </svg>
+      </a>
+    </li>
+
+
+  </ul>
+
+
+</section>
+
+
  </div>
 </footer>
 
