--- a/index.html
+++ b/index.html
@@ -31,15 +31,11 @@
 
          <ul class="header-contact">
             <li class="header-contact-item list">
-                <a href="" class="contact-icon-link" ><svg class="contact-icon" width="16" height="12">
-                    <use href="./images/symbol-defs1.svg#icon-meil"></use></svg> </a>
-                <a href="mailto:info@devstudio.com" class="header-contact-link link">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="header-contact-link link mail-logo">info@devstudio.com</a>
             </li>
 
             <li class="header-contact-item list">
-                <a href="" class="contact-icon-link"><svg class="contact-icon" width="10" height="16">
-                    <use href="./images/symbol-defs1.svg#icon-smartphone"></use> </svg> </a>
-                <a href="tel:+38 096 111 11 11" class="header-contact-link link">+38 096 111 11 11</a>
+                <a href="tel:+38 096 111 11 11" class="header-contact-link link tel-logo">+38 096 111 11 11</a>
             </li>
          </ul>
         </div>
@@ -230,7 +226,7 @@
                 <ul class="client-list list">
                     <li class="client-list-item"><a href="" class="client-list-link"> <svg class="client-list-logo" width="106" height="60"> 
                         
-                        <use href="./images/symbol-defs1.svg#icon-Klient1"> </use> </svg> </a></li>
+                        <use href="./images/symbol-defs1.svg#icon-Klient1"> </svg> </a></li>
 
                     <li class="client-list-item"><a href="" class="client-list-link"> <svg class="client-list-logo" width="106" height="60"> 
                         <use href="./images/symbol-defs1.svg#icon-Klient2"> </use> </svg> </a></li>
@@ -274,7 +270,8 @@
             <h2 class="soc-seti-title">присоединяйтесь</h2>
             <ul class="soc-seti-list list">
                 <li class="soc-seti-item"><a href="" class="soc-seti-link">
-                    <svg class="soc-seti-logo" width="20" height="20"><use href="./images/icons.svg#icon-instagram-2"></use> </svg>
+                    <svg class="soc-seti-logo" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram-2"></use> </svg>
                 </a>
                </li>
                 <li class="soc-seti-item"><a href="" class="soc-seti-link">
