--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
 
          <ul class="header-contact">
             <li class="header-contact-item list">
-                <a href="mailto:info@devstudio.com" class="header-contact-link link mail-logo">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="header-contact-link link mail-logo"><svg class="contact-icon" width="16" height="12"><use href="./images/symbol-defs1.svg#icon-meil"></use> 
+                </svg>info@devstudio.com</a>
             </li>
 
             <li class="header-contact-item list">
-                <a href="tel:+38 096 111 11 11" class="header-contact-link link tel-logo">+38 096 111 11 11</a>
+                <a href="tel:+38 096 111 11 11" class="header-contact-link link tel-logo"><svg class="contact-icon" width="10" height="16"><use href="./images/symbol-defs1.svg#icon-smartphone"></use>
+                </svg> +38 096 111 11 11</a>
             </li>
          </ul>
         </div>
