--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
          <ul class="header-contact">
             <li class="header-contact-item list">
-                <a href="mailto:info@devstudio.com" class="header-contact-link link mail-logo"><svg class="contact-icon" width="16" height="12"><use href="./images/symbol-defs1.svg#icon-meil"></use> 
+                <a href="mailto:info@devstudio.com" class="header-contact-link link mail-logo"><svg class="contact-icon" width="16" height="12"><use href="./images/meil.svg"></use> 
                 </svg>info@devstudio.com</a>
             </li>
 
