--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
          <ul class="header-contact">
             <li class="header-contact-item list">
-                <a href="mailto:info@devstudio.com" class="header-contact-link link mail-logo"><svg class="contact-icon" width="16" height="12"><use href="./images/meil.svg"></use> 
+                <a href="mailto:info@devstudio.com" class="header-contact-link link mail-logo"><svg class="contact-icon" width="16" height="12"><use href="./images/symbol-defs1.svg#icon-meil"></use> 
                 </svg>info@devstudio.com</a>
             </li>
 
@@ -290,7 +290,7 @@
                 </li>
                 <li class="soc-seti-item"><a href="" class="soc-seti-link">
                         <svg class="soc-seti-logo" width="20" height="20">
-                            <use href="/images/icons.svg#icon-linkedin-1"></use>
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
                     </a>
                 </li>
