--- a/goit-markup-hw-02/portfolio.html
+++ b/goit-markup-hw-02/portfolio.html
@@ -35,14 +35,14 @@
 
      <li class="header-contact-item list">
       <a href="mailto:info@devstudio.com" class="header-contact-link link"> <svg class="contact-icon" width="16" height="12">
-        <use href="/images/symbol-defs1.svg#icon-meil"></use>
+        <use href="../images/symbol-defs1.svg#icon-meil"></use>
       </svg> info@devstudio.com</a>
 
     </li>
   
      <li class="header-contact-item list">
       <a href="tel:+380961111111" class="header-contact-link link"><svg class="contact-icon" width="10" height="16">
-        <use href="/images/symbol-defs1.svg#icon-smartphone"></use>
+        <use href="../images/symbol-defs1.svg#icon-smartphone"></use>
       </svg> +38 096 111 11 11 </a>
      
     </li>
